# TeSSLa-mirror

./: .gitignore  .gitlab-ci.yml  .hgignore  .hgtags  .scalafmt.conf  CHANGELOG.md  Cargo.toml  IO.md  LICENSE  LICENSE-HEADER  README.md  TODO.md  bla.java  build.sbt  foo.tessla  function-mess.tessla  install.sh  runtests.sh  scalastyle-config.xml  spec.tessla
.bsp/: sbt.json
core/: README.md
doc/: .gitignore  Architecture.md  IO.md  Makefile  apx_examples.tex  bibliography.bib  fig_streams.tex  fig_workflow.tex  macros.tex  main.tex  sec_intro.tex  sec_recursion.tex  sec_semantics.tex  sec_syntax.tex
docs/: README.md  changes.md  phases.md  syntax.md  trace-syntax.md
examples/: bla.input  bla.tessla  bursty-mcburst-pattern.input  bursty-mcburst-pattern.tessla  no-event.input  no-event.tessla  temperature.input  traces.tessla
instrumenter/: README.md
interpreter/: README.md
manual-tests/: SCC-1.output  annotations.tessla  big-generated.input  big-generated.output  big-inputs.tessla  big.input  big.output  include-test-incl.tessla  include-test.errors  include-test.tessla  include-test2-incl.tessla  include-test2.output  include-test2.tessla  kinda-big.input  kinda-big.out  kinda-big.output  kinda-big.tessla  print.input  print.json  print.output  print.tessla  tessladoc-incl.tessla  tessladoc.tessla
project/: plugins.sbt
scripts/: create-test-case.rb  install.sh
tessla/: build.sbt
tessla-compiler/: README.md
tessla2code/: .gitignore  README.md
tessla_0.1/: tessla_funktionen.spec
tessla_wide/: build.sbt
test/: .gitignore  Testcases.lst  (+3 more)
(+1778 files in other folders)
